Dropbox/Trabalho/Pixeon/Bitbucket/pixeon-eng-sre-platform-04e299f662b3/containers/rancher2/developers/mongo-developers.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-developers
  namespace: developers
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-developers
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: mongo-developers
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: mongo-developers
        image: mongo:3.4.21-xenial
        ports:
        - containerPort: 27017
          name: mongo-devel
        volumeMounts:
        - mountPath: "/data/db"
          name: mongo-developers
      volumes:
        - name: mongo-developers
          persistentVolumeClaim:
            claimName: mongo-developers
      hostname: mongo-developers
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-developers
  namespace: developers
spec:
  ports:
  - port: 27017
  selector:
    app: mongo-developers
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-developers-loadbalancer
  namespace: developers
spec:
  type: LoadBalancer
  ports:
  - port: 27017
  selector:
    app: mongo-developers
