Dropbox/Trabalho/Pixeon/Bitbucket/pixeon-eng-sre-platform-04e299f662b3/containers/rancher2/developers/ingress-developers.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: developers-ingress
  namespace: developers
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-production
spec:
  tls:
  - hosts:
    - rabbitmq.developers.pixeon.cloud
    secretName: developers-secret
  rules:
  - host: rabbitmq.developers.pixeon.cloud
    http:
      paths:
      - backend:
          serviceName: rabbitmq-developers-web
          servicePort: 15672
